# meson_template

./: .clang-format  README.md  meson.build
include/: lib.h  meson.build
src/: lib.cc  main.cc  meson.build
test/: meson.build  test.cc
